--- a/ingress-srv.yaml
+++ b/ingress-srv.yaml
@@ -21,6 +21,6 @@ spec:
             pathType: Prefix
             backend:
               service:
-                name: platforms-clusterip-srv
+                name: commands-clusterip-srv
                 port:
                   number: 80
